[package]
name = "pulse-server"
version = "0.1.0"
edition = "2024"

[dependencies]
ngrok = "0.15.0"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
reqwest = { version = "0.12.18", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
tower-http = { version = "0.6.4", features = ["cors"] }
hyper = "1.6.0"
serde_json = "1.0.140"
futures = "0.3.31"
log = "0.4.27"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.15"
chrono = "0.4.41"
dashmap = "6.1.0"
once_cell = "1.21.3"
axum = { version = "0.8", features = ["macros"] }
feed-rs = "2.3.1"
